[package]
name = "nndl-rust"
version = "0.1.0"
authors = ["Nathan Goldbaum <nathan12343@gmail.com>"]
edition = "2018"

[dependencies]
flate2 = "1.0"
ndarray = { version = "0.12", features = ["blas"] }
blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }
ndarray-rand = "0.9"
rand = "0.6"
lazy_static = "1.3"
byteorder = "1.3"

[profile.release]
debug = true